<resources>
    <string name="app_name">Social Train Journey</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="laden">laden…</string>
    <string name="zelfdepagina">Je bent al op deze pagina</string>
    <string name="log_out">Uitgelogd</string>
    <string name="nodata">Geen treinen gevonden</string>
    <string name="ingecheckt">Je bent ingecheckt in de trein</string>
    <string name="deleted">Verwijderd</string>
    <string name="vraag_uitloggen">Weet je zeker dat je uit wilt loggen?</string>
    <string name="haveto_logout">Je bent al ingecheckt, check eerst uit om opnieuw in te checken</string>
    <string name="ok">OK</string>
    <string name="action_settings">Settings</string>
    <string name="gezellig_reizen">Gezellig, je kunt samen reizen met </string>
    <string name="saai_reizen">Helaas, geen van je vrienden zit in dezelfde trein. Succes met een saaie treinreis!</string>
    <string name="eerst_inchecken">Je moet eerst inchecken in een trein</string>
    <string name="uitchecken">Wil je uitchecken van de trein waarin je zat? Klik dan op de ja-button.</string>
    <string name="ja">Ja</string>
    <string name="nee">Nee</string>
    <string name="vulstationin">Vul je vertrekstation in</string>
    <string name="nietingecheckt">Je bent zelf niet ingecheckt, check eerst in!</string>
    <string name="error">Error</string>
    <string name="cancel">Cancel</string>
    <string name="facebook_app_id">1040163589387502</string>
    <string name="login">Login</string>
    <string name="name_app">Social Train Journey</string>
    <string name="welcome_text">Connect met je vrienden in de trein!</string>
    <string name="title_nav_bar">Social Train Journey</string>
    <string name="undertitle_nav_bar">Connect met je vrienden in de trein!</string>
    <string name="search_trains">ZOEK</string>
    <string name="question_whichstation">Vanaf welk station reis je?</string>
    <string name="checkin">INCHECKEN</string>
    <string name="logout">Logout</string>
    <string name="check_out_historie">Check-In Historie</string>
    <string name="friends">Deze vrienden gebruiken de app ook!</string>
    <string name="station">Station</string>
    <string name="vertrektijd">VERTREKTIJD</string>
    <string name="ritnummer">RITNUMMER</string>
    <string name="vertrekt_om">die vertrekt om</string>
    <string name="traincheck">Klopt het dat je in de trein met de volgende eindbestemming zit?</string>
    <string name="check_in">Check-In</string>
    <string name="friends_checkin">Checkout en Vrienden </string>
    <string name="logout_fb">Uitloggen</string>
    <string name="historietext">Jij zat in de volgende trein(en) richting:</string>
    <string name="ongeldigstation">Dit station is niet geldig of bestaat niet</string>
    <string name="checkfriends">Check of het een Social Train Journey wordt!</string>
    <string name="checkbox_text">Ingecheckt in trein</string>
    <string name="richting">Richting</string>
    <string name="vertrektijd_low">Vertrektijd</string>
</resources>