<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CheckInActivity"
    android:background="#81BEF7">


    <ImageView
        android:contentDescription="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo_app"
        android:src="@drawable/logooo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="@string/checkin"
        android:id="@+id/checkin_button"
        android:layout_marginBottom="69dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="addHistory"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/station"
        android:id="@+id/eindbestemming"
        android:layout_below="@+id/vraag_check"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="92dp"
        android:textStyle="bold"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/vertrektijd"
        android:id="@+id/vertrektijd"
        android:layout_below="@+id/vertrektom"
        android:textStyle="bold"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/ritnummer"
        android:id="@+id/ritnummer"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/vertrekt_om"
        android:id="@+id/vertrektom"
        android:layout_below="@+id/eindbestemming"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/traincheck"
        android:textAlignment="center"
        android:id="@+id/vraag_check"
        android:layout_below="@+id/logo_app"
        android:layout_toRightOf="@+id/ritnummer"
        android:layout_toEndOf="@+id/ritnummer" />



</RelativeLayout>
