<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.josien.programmeerproject2.MainActivity"
    android:background="#81BEF7">

<AutoCompleteTextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/logo_app"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:id="@+id/autocomplete"
    android:hint="@string/question_whichstation"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_trains"
        android:id="@+id/get_data"
        android:layout_below="@+id/autocomplete"
        android:layout_centerHorizontal="true"
        android:onClick="get_data"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listViewleavingtrains"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/richting" />

    <ImageView
        android:contentDescription="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo_app"
        android:src="@drawable/logooo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/richting"
        android:id="@+id/richting"
        android:layout_below="@+id/get_data"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/vertrektijd_low"
        android:id="@+id/vertrektijd"
        android:layout_above="@+id/listViewleavingtrains"
        android:layout_alignRight="@+id/listViewleavingtrains"
        android:layout_alignEnd="@+id/listViewleavingtrains"
        android:visibility="invisible"/>
</RelativeLayout>
